--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:testdb 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.use-new-id-generator-mappings=false
+# Oracle settings
+spring.datasource.url=jdbc:oracle:thin:@horacy.wsti.pl:1521:bazawsti
+spring.datasource.username=projekt40
+spring.datasource.password=haslo2015
+spring.datasource.driver-class-name= oracle.jdbc.driver.OracleDriver
+spring.jpa.hibernate.ddl-auto= update
+
 spring.jpa.show-sql=true
-hibernate.hbm2ddl.auto=create-drop
+
+# logs the SQL statements
+log4j.logger.org.hibernate.SQL=debug 
+
+# Logs the JDBC parameters passed to a query
+log4j.logger.org.hibernate.type=trace 
 
