commit before rebase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 # logs the SQL statements
 log4j.logger.org.hibernate.SQL=debug 
 
+#change
 # Logs the JDBC parameters passed to a query
 log4j.logger.org.hibernate.type=trace 
 
