--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.show-sql=true
 
+# Nowe zmiany dla merge
 # logs the SQL statements
 log4j.logger.org.hibernate.SQL=debug 
 
